chore(web): 有优化公用卡片样式

--- a/web/src/style/appCard.scss
+++ b/web/src/style/appCard.scss
@@ -4,6 +4,7 @@
     -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
     padding-top: 20px;
+    width: 100%;
     .app-card-create {
         width: 100%;
         text-align: center;
