--- a/web/src/style/appCard.scss
+++ b/web/src/style/appCard.scss
@@ -61,11 +61,6 @@
         border-radius: 8px;
         cursor: pointer;
         height: 150px;
-        .logo /deep/ {
-            img {
-                object-fit: contain;
-            }
-        }
         .tags{
             position: absolute;
             bottom: 10px;
@@ -116,16 +111,19 @@
         .tag-app.rag-tag {
             background: linear-gradient( 180deg, #C098FF 0%, #A16FF4 100%);
         }
-        .logo{
+        .logo /deep/ {
             width: 60px;
             height: 60px;
-            object-fit: contain;
             margin-right: 12px;
-            padding: 10px 5px;
+            /*object-fit: cover;
+            padding: 10px 5px;*/
             background: #FFFFFF;
             box-shadow: 0 1px 4px 0 rgba(0,0,0,0.15);
             border-radius: 8px;
             border: 0 solid #D9D9D9;
+            img {
+                object-fit: cover;
+            }
         }
         .info{
             width: 0;
