chore(web): 调整页面显示出滚动条，规范文件夹命名

--- a/web/src/style/index.scss
+++ b/web/src/style/index.scss
@@ -183,9 +183,9 @@
 }
 
 /*隐藏滚动条但是允许滚动*/
-::-webkit-scrollbar{
+/*::-webkit-scrollbar{
     display: none;
-}
+}*/
 pre::-webkit-scrollbar{
     display: block!important;
 }
