--- a/web/src/style/draft.scss
+++ b/web/src/style/draft.scss
@@ -161,7 +161,7 @@
       }
     }
 
-    /deep/ .desc-input {
+    ::v-deep .desc-input {
       height: 100%;
       .el-textarea__inner {
         height: 100% !important;
@@ -247,8 +247,8 @@
       cursor: pointer;
     }
 
-    /deep/ .el-input__inner,
-    /deep/ .el-textarea__inner {
+    ::v-deep .el-input__inner,
+    ::v-deep .el-textarea__inner {
       border: 1px solid #d3d7dd !important;
       font-family: 'Microsoft YaHei', Arial, sans-serif;
       padding: 15px;
@@ -288,7 +288,7 @@
       right: 10px;
     }
 
-    /deep/ .desc-input {
+    ::v-deep .desc-input {
       .el-textarea__inner {
         height: 90px !important;
       }
