--- a/web/src/style/echart.scss
+++ b/web/src/style/echart.scss
@@ -28,7 +28,7 @@
     margin-left: 15px;
 
     &::after {
-      content: "";
+      content: '';
       width: 3px;
       height: 15px;
       background: $color;
